chore: Update author information to zk0x01

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "deepseek",
     "open-source"
   ],
-  "author": "AI Content Converter Team",
+  "author": "zk0x01",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/KK8088/ai-content-converter/issues"
