cleanup: Remove unnecessary package-lock.json and optimize package.json
 File Cleanup:
- Move package-lock.json to archive/ (unnecessary for zero-dependency project)
- Remove empty dependencies and devDependencies from package.json
- Simplify npm scripts to only essential ones (start, serve)
- Update files array to reflect current project structure

 Rationale:
- Project is pure frontend with zero npm dependencies
- No build process or package management needed
- Static files run directly in browser
- package-lock.json was outdated (v1.0.0) and served no purpose

 package.json Optimizations:
- Remove unused scripts (test, lint, build, deploy)
- Remove empty dependency objects
- Update files array (remove docs/, add README_EN.md)
- Keep only essential npm scripts for local development

 Benefits:
- Cleaner project structure
- Reduced confusion for users
- No misleading dependency files
- Simplified development workflow
- Compliance with project maintenance standards

This cleanup aligns with the project's pure frontend nature and
eliminates unnecessary Node.js ecosystem files.

--- a/package.json
+++ b/package.json
@@ -4,13 +4,8 @@
   "description": "将AI对话内容完美转换为专业的Word和Excel文档",
   "main": "index.html",
   "scripts": {
-    "dev": "python -m http.server 8080",
-    "serve": "python -m http.server 8080",
     "start": "python -m http.server 8080",
-    "test": "echo \"暂无测试\" && exit 0",
-    "lint": "echo \"代码检查通过\" && exit 0",
-    "build": "echo \"构建完成\" && exit 0",
-    "deploy": "echo \"部署完成\" && exit 0"
+    "serve": "python -m http.server 8080"
   },
   "repository": {
     "type": "git",
@@ -38,8 +33,7 @@
     "url": "https://github.com/KK8088/ai-content-converter/issues"
   },
   "homepage": "https://KK8088.github.io/ai-content-converter",
-  "devDependencies": {},
-  "dependencies": {},
+
   "browserslist": [
     "> 1%",
     "last 2 versions",
@@ -50,8 +44,8 @@
     "index.html",
     "css/",
     "js/",
-    "docs/",
     "LICENSE",
-    "README.md"
+    "README.md",
+    "README_EN.md"
   ]
 }
